# keycloak-integrations

./: LICENSE  README.md  index.html
SpringMVCKeycloakApp/: pom.xml
angular-keycloak/: README.md  angular.json  package-lock.json  package.json
angular-keycloak/src/: index.html  main.ts
curl-post-request/: README.md  keycloak-curl.sh
dapr-keycloak/: README.md
dapr-keycloak/kind-ingress-setup/: README.md  kind-ingress.config
dapr-keycloak/middleware-oauth/: README.md
fastapi-keycloak/: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  realm-export.json  token.sh
fastapi-keycloak/fastapi_keycloak/: keycloak.py  main.py
kafka-sasl-oauth-keycloak/: README.md
kafka-sasl-oauth-keycloak/CR/: keycloak.yaml  my-cluster.yaml
kafka-sasl-oauth-keycloak/consumer/: README.md  pom.xml
kc-dynamic-client/: .gitignore  Makefile  README.md  go.mod  go.sum
keycloak-default-sa/: README.md  docker-before.yaml  docker-compose.yaml  get-token.sh  realm-export.json  test-sa.json
keycloak-postgresql/: README.md  cleanup_postgres.sh  setup_postgres.sh  standalone.xml
keycloak-spi-kafka/: .gitignore  README.md  pom.xml
mcp-keycloak/: KeycloakOAuthProvider.py  README.md  client-llama.py  client.py  docker-compose.yaml  mcp-llama-stack.py  mcpserver.py  pyproject.toml  realm-export.json
quarkus-react-keycloak/: README.md
react-keycloak/: package.json
serviceaccount-admin-api/: README.md  realm-export.json  sa.sh
spring-boot-mvc-keycloak/: .gitignore  README.md
vue-keycloak/: README.md  package-lock.json  package.json
(+90 files in other folders)
